Typing Speed Mini Project Completed

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Typing Speed</title>
 	<link rel="stylesheet" type="text/css" href="index.css">
-	<script type="text/javascript" src="index.js"></script>
+	
 	
 </head>
 <body>
@@ -11,12 +11,12 @@
  	<div class="centerDiv">
  		<h1>Welcome To Typing Speed Test</h1>
  		<h2 id="msg"></h2><br>
- 		<textarea id="myords" cols="100" rows="10" placeholder="remember, be nice!"></textarea><br>
+ 		<textarea id="mywords" cols="100" rows="10" placeholder="remember, be nice!"></textarea><br>
  		<button id="btn" class="mainbtn">Start</button>
  	</div>
  </div>
 </body>
-
+<script type="text/javascript" src="index.js"></script>
 </html>
 
 
